--- a/FaPA/GUI/Design/Templates/DatiDocumentiCorrelati.xaml
+++ b/FaPA/GUI/Design/Templates/DatiDocumentiCorrelati.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:utils="clr-namespace:FaPA.GUI.Utils"
-             xmlns:mrn="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator">
+             xmlns:t="clr-namespace:FaPA.GUI.Design.Templates">
 
 
     <Grid utils:FocusAdvancement.AdvancesByEnterKey="True">
@@ -79,67 +79,20 @@
             </Grid>
         </Border>
 
-        <StackPanel Width="Auto" HorizontalAlignment="Stretch"  Grid.Row="0" Orientation="Vertical"
-                    Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
+        <t:InstanceNullManager  Grid.Row="0" Grid.Column="0" 
+                                BindedInstance="{Binding CurrentPoco}"
+                                EmptyMessage="Nessuna scheda fattura principale aggiunta"
+                                ActionCommandMessage="Aggiungi una scheda fattura principale aggiunta"
+                                OnNullCommand="{Binding AddItemCommand}" 
+                                ActionCommandParam="FatturaPrincipale"/>
 
-            <TextBlock Text="Nessun documento correlato è stato aggiunto " FontSize="14" Foreground="Red" 
-                           Height="Auto" Margin="10,25,15,15" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
-
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,15"> 
-                    <Hyperlink FontSize="14"  Command="{Binding AddItemCommand}">
-                        <Run Text="Aggiungi un documento correlato" />
-                    </Hyperlink>
-            </TextBlock>
-
-        </StackPanel>
-
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Height="Auto"  Margin="2,2,2,2" 
-                    Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
-
-            <!--<StackPanel.InputBindings>
-                <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
-                <KeyBinding Key="F9"  Command="{Binding SearchOnSite}" />
-            </StackPanel.InputBindings>-->
-          
-            <Border Margin="2,2,2,2" Padding="2,5,4,4" Height="32"
-                                     Visibility="{Binding Path=UserCollectionView.IsEmpty, Mode=OneWay, 
-                                     Converter={StaticResource BoolToOppositeVisibilityConverter}}">
-                
-                <mrn:MyRecordNavigator ItemsSource="{Binding UserCollectionView}"/>
-            </Border>
-
-            <DockPanel Height="25" Margin="2,2,2,2" Background="{StaticResource Brush_ToolBar}">
-
-                <Button Name="Add"
-                    Command="{Binding AddItemCommand}"                        
-                    ToolTip="Aggiunge una sheda dati pagamento" >
-
-                    <Image Source="/GUI/Design/Styles/Images/Add_24.png" Width="Auto"/>
-                </Button>
-
-                <Button Name="Delete" Command="{Binding DeleteEntityCommand}"                        
-                    ToolTip="Elimina definitivamente l'oggetto dal database" >
-
-                    <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
-                </Button>
-
-                <Button Name="Save" Command="{Binding SaveEntity}" Width="Auto"
-                        ToolTip="Salva le modifiche apportate all'oggetto">
-
-                    <Image Source="/GUI/Design/Styles/Images/save(1).png" Width="25"/>
-                </Button>
-
-                <Button Name="Cancel" Command="{Binding PerformCancel}"   Width="25" HorizontalAlignment="Left"                
-                        ToolTip="Annulla le modifiche apportate"  >
-
-                    <Image Source="/GUI/Design/Styles/Images/cancel.png" Width="25"/>
-
-                </Button>
-
-            </DockPanel>
-
-        </StackPanel>
-
+        <t:SaveCancelRemoveButtons  Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left"
+                                    Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}"
+                                    UserCollectionView="{Binding UserCollectionView}"
+                                    DeleteEntityCommand="{Binding DeleteEntityCommand}"
+                                    SaveCommand="{Binding SaveEntity}"
+                                    PerformCancelCommand="{Binding PerformCancel}"
+                                    AddItemCommand="{Binding AddItemCommand}"/>
     </Grid>
 
 </UserControl>
