--- a/FaPA/GUI/Design/Templates/DatiTrasmittente.xaml
+++ b/FaPA/GUI/Design/Templates/DatiTrasmittente.xaml
@@ -1,9 +1,14 @@
 ﻿<UserControl x:Class="FaPA.GUI.Design.Templates.DatiTrasmittente"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:utils="clr-namespace:FaPA.GUI.Utils">
+             xmlns:t="clr-namespace:FaPA.GUI.Design.Templates">
 
     <Grid Margin="2,2,2,2">
+
+        <Grid.Effect>
+            <DropShadowEffect Color="LightSteelBlue" Direction="280"/>
+        </Grid.Effect>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -71,32 +76,10 @@
             </Grid>
         </GroupBox>
 
-        <StackPanel Orientation="Vertical" Grid.Row="2" Height="Auto"  Margin="2,2,2,2" 
-                    utils:FocusAdvancement.AdvancesByEnterKey="True">
-
-            <StackPanel.InputBindings>
-                <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
-                <KeyBinding Key="F9"  Command="{Binding SearchOnSite}" />
-            </StackPanel.InputBindings>
-
-            <DockPanel Height="25" Margin="2,2,2,2" Background="{StaticResource Brush_ToolBar}">
-
-                <Button Name="Save" Command="{Binding SaveEntity}" Width="Auto"
-                        ToolTip="Salva le modifiche apportate all'oggetto">
-
-                    <Image Source="/GUI/Design/Styles/Images/save(1).png" Width="25"/>
-                </Button>
-
-                <Button Name="Cancel" Command="{Binding PerformCancel}"   Width="25" HorizontalAlignment="Left"                
-                        ToolTip="Annulla le modifiche apportate"  >
-
-                    <Image Source="/GUI/Design/Styles/Images/cancel.png" Width="25"/>
-
-                </Button>
-
-            </DockPanel>
-
-        </StackPanel>
+        <t:SaveCancelRemoveButtons Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left"
+                                   Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}"
+                                   SaveCommand="{Binding SaveEntity}"
+                                   PerformCancelCommand="{Binding PerformCancel}"/>
 
     </Grid>
 
