--- a/FaPA/GUI/Design/Templates/Ritenuta.xaml
+++ b/FaPA/GUI/Design/Templates/Ritenuta.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="FaPA.GUI.Design.Templates.Ritenuta"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:utils="clr-namespace:FaPA.GUI.Utils">
+             xmlns:t="clr-namespace:FaPA.GUI.Design.Templates">
 
     <Grid Margin="2,2,2,2">
         <Grid.RowDefinitions>
@@ -10,22 +10,15 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackPanel x:Name="infoPanel" Width="Auto" HorizontalAlignment="Stretch"  Grid.Row="0" Orientation="Vertical"
-                   Visibility="{Binding CurrentPoco, Converter={StaticResource NullToInverseVisibiltyConverter}}">
-
-            <TextBlock Text="Nessuna ritenuta è stata aggiunta" FontSize="14" Foreground="Red" 
-                           Height="Auto" Margin="10,25,15,15" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
-
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,15"> 
-                    <Hyperlink FontSize="14"  Command="{Binding AddItemCommand}">
-                        <Run Text="Aggiungi una ritenuta" />
-                    </Hyperlink>
-            </TextBlock>
-
-        </StackPanel>
+        <t:InstanceNullManager  Grid.Row="0" Grid.Column="0" 
+                                BindedInstance="{Binding CurrentPoco}"
+                                EmptyMessage="Nessuna scheda fattura principale aggiunta"
+                                ActionCommandMessage="Aggiungi una scheda fattura principale aggiunta"
+                                OnNullCommand="{Binding AddItemCommand}" 
+                                ActionCommandParam="FatturaPrincipale"/>
 
         <GroupBox Grid.Row="0" Header="Ritenuta previdenziale"
-                  Visibility="{Binding ElementName=infoPanel, Path=Visibility, Converter={StaticResource InvertVisibilityConverter}}" >
+                  Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}" >
             
             <Grid Margin="2,2,2,2">
                 <Grid.RowDefinitions>
@@ -66,7 +59,7 @@
         </GroupBox>
 
         <GroupBox Grid.Row="1" Header="Cassa previdenziale"
-                  Visibility="{Binding ElementName=infoPanel, Path=Visibility, Converter={StaticResource InvertVisibilityConverter}}">
+                  Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
             
             <Grid Margin="2,2,2,2">
                 <Grid.RowDefinitions>
@@ -108,42 +101,12 @@
         
         </GroupBox>
 
-        <StackPanel Orientation="Vertical" Grid.Row="2" Height="Auto"  Margin="2,2,2,2" 
-                    utils:FocusAdvancement.AdvancesByEnterKey="True"
-                    Visibility="{Binding ElementName=infoPanel, Path=Visibility, Converter={StaticResource InvertVisibilityConverter}}">
-
-            <!--<StackPanel.InputBindings>
-                <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
-                <KeyBinding Key="F9"  Command="{Binding SearchOnSite}" />
-            </StackPanel.InputBindings>-->
-
-            <DockPanel Height="25" Margin="2,2,2,2" Background="{StaticResource Brush_ToolBar}">
-
-                <Button Name="Delete"
-                    Command="{Binding DeleteEntityCommand}"                        
-                    ToolTip="Elimina definitivamente l'oggetto dal database" >
-
-                    <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
-                </Button>
-
-
-                <Button Name="Save" Command="{Binding SaveEntity}" Width="Auto"
-                        ToolTip="Salva le modifiche apportate all'oggetto">
-
-                    <Image Source="/GUI/Design/Styles/Images/save(1).png" Width="25"/>
-                </Button>
-
-                <Button Name="Cancel" Command="{Binding PerformCancel}"   Width="25" HorizontalAlignment="Left"                
-                        ToolTip="Annulla le modifiche apportate"  >
-
-                    <Image Source="/GUI/Design/Styles/Images/cancel.png" Width="25"/>
-
-                </Button>
-
-            </DockPanel>
-
-        </StackPanel>
-
+        <t:SaveCancelRemoveButtons  Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left"
+                                    Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}"
+                                    UserCollectionView="{Binding UserCollectionView}"
+                                    DeleteEntityCommand="{Binding DeleteEntityCommand}"
+                                    SaveCommand="{Binding SaveEntity}"
+                                    PerformCancelCommand="{Binding PerformCancel}"/>
     </Grid>
 
 </UserControl>
