--- a/FaPA/GUI/Design/Templates/AltriDatiGrid.xaml
+++ b/FaPA/GUI/Design/Templates/AltriDatiGrid.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:FaPA.GUI.Controls"
-        xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
+        xmlns:t="clr-namespace:FaPA.GUI.Design.Templates"
         mc:Ignorable="d">
     <Grid >
 
@@ -14,16 +14,12 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <DockPanel Grid.Row="0"
-                   Visibility="{Binding Path=IsEmpty, Converter={StaticResource BoolToVisibilityConverter},Mode=OneWay}">
-
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,0"> 
-                    <Hyperlink FontSize="14" Command="{Binding AddItemCommand}">
-                        <Run Text="Inserisci un nuovo elemento" />
-                    </Hyperlink>
-            </TextBlock>
-
-        </DockPanel>
+        <t:InstanceNullManager  Grid.Row="0" 
+                                Visibility="{Binding Path=IsEmpty, Converter={StaticResource BoolToVisibilityConverter},Mode=OneWay}"
+                                EmptyMessage="Nessuna scheda dati trasporto è stata aggiunta"
+                                ActionCommandMessage="Aggiungi una scheda dati trasporto"
+                                OnNullCommand="{Binding AddItemCommand}"
+                                ActionCommandParam="DatiTrasporto"/>
 
         <DockPanel Grid.Row="1">
             <DataGrid x:Name="AltriDatiGridControl" ItemsSource="{Binding UserCollectionView, NotifyOnSourceUpdated=True}"
@@ -51,7 +47,7 @@
                             </Trigger>
                         </Style.Triggers>
                     </Style>
-                    
+
                 </DataGrid.Resources>
 
                 <DataGrid.RowValidationRules>
@@ -103,39 +99,15 @@
                 </DataGrid.GroupStyle>
 
             </DataGrid>
-
         </DockPanel>
 
-        <DockPanel Width="Auto" Grid.Row="2" Height="25" 
-                   Visibility="{Binding IsEmpty, Converter={StaticResource BoolToOppositeVisibilityConverter},Mode=OneWay}"
-                   Margin="0 05 0 0" 
-                   Background="{StaticResource Brush_ToolBar}">
-
-            <myRecordNavigator:MyRecordNavigator ItemsSource="{Binding Path=UserCollectionView}"
-                                                 GridSource="{Binding ElementName=AltriDatiGridControl}"
-                                                 Height="25"/>
-            
-            <Button Command="{Binding AddItemCommand}"                        
-                    ToolTip="Aggiunge nuovo record" >
-
-                <Image Source="/GUI/Design/Styles/Images/Add_24.png" Width="Auto"/>
-            </Button>
-
-            <Button Command="{Binding DeleteEntityCommand}"                        
-                    ToolTip="Elimina record" >
-
-                <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
-            </Button>
-
-            <!--<Button Command="{Binding PerformCancel}"   Width="25" HorizontalAlignment="Left"                
-                        ToolTip="Annulla le modifiche apportate"  >
-
-                <Image Source="/GUI/Design/Styles/Images/cancel.png" Width="25"/>
-
-            </Button>-->
-
-        </DockPanel>
-
+        <t:SaveCancelRemoveButtons  Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left"
+                                    Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}"
+                                    UserCollectionView="{Binding Path=UserCollectionView}"
+                                    DeleteEntityCommand="{Binding DeleteEntityCommand}"
+                                    AddItemCommand="{Binding AddItemCommand}"
+                                    SaveCommand="{Binding SaveEntity}"
+                                    PerformCancelCommand="{Binding PerformCancel}"/>
     </Grid>
 
 </controls:BaseListViewControl>
