--- a/FaPA/GUI/Design/Styles/DataTemplates.xaml
+++ b/FaPA/GUI/Design/Styles/DataTemplates.xaml
@@ -36,6 +36,10 @@
         </Border>
     </DataTemplate>
 
+    <DataTemplate DataType="{x:Type a:AllegatiViewModel}">
+        <t1:Allegati />
+    </DataTemplate>
+
     <DataTemplate DataType="{x:Type a:DatiDocumentoViewModel}">
         <t1:DatiDocumento />
     </DataTemplate>
