--- a/FaPA/GUI/Design/Templates/InstanceNullManager.xaml
+++ b/FaPA/GUI/Design/Templates/InstanceNullManager.xaml
@@ -14,10 +14,10 @@
         <StackPanel Width="Auto" HorizontalAlignment="Stretch"  Grid.Row="0" Orientation="Vertical"
                     Visibility="{Binding BindedInstance, Converter={StaticResource NullToInverseVisibiltyConverter}}">
 
-            <TextBlock Text="{Binding EmptyMessage}" FontSize="14" Foreground="Red" 
-                       Height="Auto" Margin="10,25,15,15" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding EmptyMessage}" FontSize="14" Foreground="DarkBlue" 
+                       Height="Auto" Margin="10,15,15,10" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
 
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,15"> 
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,20"> 
                         <Hyperlink FontSize="14"  
                                    Command="{Binding OnNullCommand}"
                                    CommandParameter="{Binding ActionCommandParam}">
